# deep_learning_from_scratch

./: .gitignore  README.md
pymyai/: pyproject.toml
pymyai/pymyai/: ch_02.py  ch_03.py  mnist.py
rsmyai/: Cargo.toml
