[tool.poetry]
name = "pymyai"
version = "0.1.0"
description = ""
authors = ["w40141 <w.40141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
image = "^1.5.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
